# droplets-detection

./: .gitignore  README.md  detect.py
droplet_detection_plugin/: README.md  setup.py
droplet_detection_plugin/napari_droplet_detector/: __init__.py  _widget.py
napari-droplets-detector/: MANIFEST.in  README.md  setup.cfg
napari-droplets-detector/napari_droplets_detector/: __init__.py  _widget.py  napari.yaml
palettes/: biogenext_palette.csv
scripts/: droplet_detection.py  droplet_detection_v2.py  droplet_detection_v3.py  droplet_detection_v4.py
