[metadata]
name = napari-droplets-detector
version = 0.1.0
description = A napari plugin for detecting and analyzing water-in-oil droplets
author = Oleksii Stroganov
author_email = merv1n@proton.me
license = MIT
url = https://github.com/merv1n34k/droplets-detection
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Processing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Framework :: napari

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    napari>=0.4.14
    numpy>=1.20.0
    scikit-image>=0.18.0
    pandas>=1.2.0
    matplotlib>=3.4.0
    magicgui>=0.3.0

[options.entry_points]
napari.manifest =
    napari-droplets-detector = napari_droplets_detector:napari.yaml
